fix: pricing alignment, margin-top:auto on features

--- a/assets/style/redesign.css
+++ b/assets/style/redesign.css
@@ -1599,6 +1599,7 @@ img {
   margin-bottom: 30px;
   min-height: 200px;
   flex-grow: 1;
+  margin-top: auto;
 }
 
 .pricing-features li {
